--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+							<p><strong>Technical Writing</strong></p>
+                             <p><strong>Institute of Engineering & Management, New Town         ~October 2024</strong></p>
+                             <p>Hold a technical writing position at Robo Melontikos, the Official UEM Robotics Club</p>
 							<p><strong>Web Innovators Battle</strong></p>
                              <p><strong>Institute of Engineering & Management, New Town         ~October 2024</strong></p>
                              <p>Designed a website as part of a mandatory competition for the Introduction to AI and Data Science using Python course.
