--- a/index.html
+++ b/index.html
@@ -230,9 +230,6 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p><strong>Technical Writing</strong></p>
-                             <p><strong>Institute of Engineering & Management, New Town         ~October 2024</strong></p>
-                             <p>Hold a technical writing position at Robo Melontikos, the Official UEM Robotics Club</p>
 							<p><strong>Web Innovators Battle</strong></p>
                              <p><strong>Institute of Engineering & Management, New Town         ~October 2024</strong></p>
                              <p>Designed a website as part of a mandatory competition for the Introduction to AI and Data Science using Python course.
@@ -337,6 +334,7 @@ Developed sections including About Me, Educational Background, Projects, and mor
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+							<p>Technical Writing Position at Robo Mellontikos. </p> 
 							<p>Actively seeking opportunities to join relevant professional organizations and clubs to further enhance my skills and network within the fields of AI, machine learning, and web development.</p>
 						</div>
 						
